--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "build": "next build && tsc --project tsconfig.server.json",
     "start": "cross-env NODE_ENV=production node dist/server.js"
   },
+  "stackblitz": {
+    "startCommand": "npm install && npm run dev"
+  },
   "dependencies": {
     "express": "4.18.2",
     "cross-env": "^7.0.3",
